# Text-to-SQL

./: .gitignore  BUILD_LEDGER.json  EMAIL_TO_RAUL.md  README.md  benchmark_results.json  dev_answers.json  eval_report.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: eval.yml
src/: agent.py  benchmark.py  cache.py  ci_eval.py  cli.py  dialect.py  eval.py  few_shot.py  ratelimit.py  trust.py  utils.py  web.py
src/static/: index.html
