[project]
name = "fireworks-text-to-sql-takehome"
version = "0.1.0"
description = "FireworksAI Text-to-SQL Take-Home Assessment"
requires-python = ">=3.11"
dependencies = ["openai", "ipython", "pandas", "pydantic", "python-dotenv", "fastapi", "uvicorn"]

[project.scripts]
cli = "src.cli:main"
eval = "src.eval:main"
benchmark = "src.benchmark:main"
web = "src.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
